// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Form/Radio RadioBase 1`] = `
<div>
  <form
    class="m-3"
  >
    <fieldset>
      <legend>
        Radio
      </legend>
      <div
        class="form-check"
      >
        <input
          aria-describedby="radio1Description"
          checked=""
          class="form-control"
          id="radio1"
          name="gruppo1"
          type="radio"
          value=""
        />
        <label
          class="form-check-label"
          for="radio1"
        >
          Radio di esempio 1
        </label>
      </div>
      <div
        class="form-check"
      >
        <input
          aria-describedby="radio2Description"
          class="form-control"
          id="radio2"
          name="gruppo1"
          type="radio"
          value=""
        />
        <label
          class="form-check-label"
          for="radio2"
        >
          Radio di esempio 2
        </label>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Radio RadioDisabilitato 1`] = `
<div>
  <section>
    <fieldset>
      <legend>
        Radio
      </legend>
      <form
        class="m-3"
      >
        <div
          class="form-check"
        >
          <input
            aria-describedby="radio5Description"
            checked=""
            class="form-control"
            disabled=""
            id="radio5"
            name="gruppo1"
            type="radio"
            value=""
          />
          <label
            class="form-check-label"
            for="radio5"
          >
            Opzione disabilitata selezionata
          </label>
        </div>
        <div
          class="form-check"
        >
          <input
            aria-describedby="radio6Description"
            class="form-control"
            disabled=""
            id="radio6"
            name="gruppo1"
            type="radio"
            value=""
          />
          <label
            class="form-check-label"
            for="radio6"
          >
            Opzione disabilitata non selezionata
          </label>
        </div>
      </form>
    </fieldset>
  </section>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Radio RadioGruppi 1`] = `
<div>
  <section>
    <div
      class="m-5 row"
    >
      <div
        class="col-md-5"
      >
        <fieldset>
          <legend>
            Radio
          </legend>
          <form
            class=""
          >
            <div
              class="form-check-group form-check"
            >
              <input
                aria-describedby="radio7Description"
                checked=""
                class="form-control"
                id="radio7"
                name="group1"
                type="radio"
                value=""
              />
              <label
                class="form-check-label"
                for="radio7"
              >
                Opzione 1
              </label>
            </div>
            <div
              class="form-check-group form-check"
            >
              <input
                aria-describedby="radio8Description"
                class="form-control"
                id="radio8"
                name="group1"
                type="radio"
                value=""
              />
              <label
                class="form-check-label"
                for="radio8"
              >
                Opzione 2
              </label>
            </div>
            <div
              class="form-check-group form-check"
            >
              <input
                aria-describedby="radio9Description"
                class="form-control"
                disabled=""
                id="radio9"
                name="group1"
                type="radio"
                value=""
              />
              <label
                class="form-check-label"
                for="radio9"
              >
                Opzione 3
              </label>
            </div>
          </form>
        </fieldset>
      </div>
      <div
        class="col-md-2"
      />
      <div
        class="col-md-5"
      >
        <fieldset>
          <legend>
            Radio
          </legend>
          <form
            class=""
          >
            <div
              class="form-check-group form-check"
            >
              <input
                aria-describedby="radio10Description"
                checked=""
                class="form-control"
                id="radio10"
                name="group2"
                type="radio"
                value=""
              />
              <label
                class="form-check-label"
                for="radio10"
              >
                Opzione 1
              </label>
              <small
                class="form-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
              </small>
            </div>
            <div
              class="form-check-group form-check"
            >
              <input
                aria-describedby="radio11Description"
                class="form-control"
                id="radio11"
                name="group2"
                type="radio"
                value=""
              />
              <label
                class="form-check-label"
                for="radio11"
              >
                Opzione 2
              </label>
              <small
                class="form-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
              </small>
            </div>
            <div
              class="form-check-group form-check"
            >
              <input
                aria-describedby="radio12Description"
                class="form-control"
                disabled=""
                id="radio12"
                name="group2"
                type="radio"
                value=""
              />
              <label
                class="form-check-label"
                for="radio12"
              >
                Opzione 3
              </label>
              <small
                class="form-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie libero
              </small>
            </div>
          </form>
        </fieldset>
      </div>
    </div>
  </section>
</div>
`;

exports[`Stories Snapshots Documentazione/Form/Radio RadioInline 1`] = `
<div>
  <section>
    <fieldset>
      <legend>
        Radio
      </legend>
      <form
        class="m-3"
      >
        <div
          class="form-check form-check-inline"
        >
          <input
            aria-describedby="radio3Description"
            checked=""
            class="form-control"
            id="radio3"
            name="gruppo1"
            type="radio"
            value=""
          />
          <label
            class="form-check-label"
            for="radio3"
          >
            Opzione 1
          </label>
        </div>
        <div
          class="form-check form-check-inline"
        >
          <input
            aria-describedby="radio4Description"
            class="form-control"
            id="radio4"
            name="gruppo1"
            type="radio"
            value=""
          />
          <label
            class="form-check-label"
            for="radio4"
          >
            Opzione 2
          </label>
        </div>
      </form>
    </fieldset>
  </section>
</div>
`;
